--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,113 @@
-img{
-    max-height: 400px;
-    min-height: 400px;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+@import "tailwindcss";
+
+body{
+    background-color:  #333333;
+}
+
+img {
+  max-height: 400px;
+  min-height: 400px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+#characters-container {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: grid;
+  border: 1px solid red;
+  gap: 80px;
+  justify-content: center;
+  align-items: center;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #000000;
+  display: flex;
+}
+
+ul li a {
+  display: block;
+  color: rgb(255, 201, 100);
+  padding: 14px 16px;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+ul li a:hover {
+  background-color: #111111;
 }
 
 
-#characters-container{
-	grid-template-columns: repeat(4, 1fr);
+.screens{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
+button{
+    color: red;
+    background-color: black;
+    width: 20px;
+}
+
+.character-card {
+    --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
+    width: 250px;
+    height: 400px;
+    padding: 5px;
+    border-radius: 1rem;
+    overflow: visible;
+    background: #f7ba2b;
+    background: var(--background);
+    position: relative;
+    z-index: 1;
+}
+   
+.character-card::after {
+    position: absolute;
+    content: "";
+    top: 30px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    transform: scale(0.8);
+    filter: blur(25px);
+    background: #f7ba2b;
+    background: var(--background);
+    transition: opacity .5s;
+}
+   
+.character-card-info {
+    --color: #181818;
+    background: var(--color);
+    color: var(--color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+    border-radius: .7rem;
+}
+   
+.character-card .title {
+    font-weight: bold;
+    letter-spacing: .1em;
+}
+   
+/*Hover*/
+.character-card:hover::after {
+    opacity: 0;
+}
+   
+.character-card:hover .character-card-info {
+    color: #f7ba2b;
+    transition: color 1s;
 }
